test/webgl/error/directive_fail.true
File 0, line 2, col 13 - 14:
invalid directive "#"

Fatal: unrecoverable preprocessor parse error (3)
